--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 canvas{
+  /* the pain position shower */
   position: absolute;
   top: 0;
+  left: 0;
   width: 50%;
-  height: 50%;
-  background-color: #000;
+  height: 100%;
+  background-color: #222222;
 }
 body{
   display: flex;
@@ -12,4 +14,15 @@ body{
   height: 100vh;
   margin: 0;
   background-color: #222222;
+}
+form{
+  /* to the right 50% of the web */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
